@@ -31,8 +31,10 @@ void I_ShutdownAudio(void);
 
 typedef struct {
 	boolean enabled;
+ 	boolean convert;
 	SDL_AudioSpec	desired;
 	SDL_AudioSpec	obtained;
+ 	SDL_AudioCVT	audioCvt;
 } sysaudio_t;
 
 extern sysaudio_t sysaudio;
