@@ -2,6 +2,10 @@
 *                     Changes done to Heretic sources                   *
 \***********************************************************************/
 
+-------------------------------- 0.55 -----------------------------------
+
+- Convert audio if 16bits stereo not available.
+
 -------------------------------- 0.54 -----------------------------------
 
 - Fixed low/high detail message.
